<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="general"
        android:title="@string/general">
        <Preference
            android:key="reset_data"
            android:summary="@string/reset_data_summary"
            android:title="@string/reset_data_title" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="useretardedmeasurement"
            android:summary="@string/fahrenheit_summary"
            android:title="@string/fahrenheit_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_update"
        android:title="@string/app_update_category">
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="app_update_notif"
            android:defaultValue="true"
            android:title="@string/app_update_notif_title"
            android:summary="@string/app_update_notif_summary" />
        <Preference
            android:key="check_update"
            android:summary="@string/check_update_summary"
            android:title="@string/check_update_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="user_interface"
        android:title="@string/user_interface">
        <com.hades.hKtweaks.views.preference.MaterialListPreference
            android:key="theme_mode"
            android:title="@string/theme_mode"
            android:summary="%s"
            android:defaultValue="system"
            android:entries="@array/theme_modes"
            android:entryValues="@array/theme_mode_values"
            />
        <com.hades.hKtweaks.views.preference.MaterialListPreference
            android:key="navigation_mode"
            android:title="@string/navigation_mode"
            android:summary="%s"
            android:defaultValue="top_tabs"
            android:entries="@array/navigation_modes"
            android:entryValues="@array/navigation_mode_values" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="forceenglish"
            android:title="@string/force_english" />
<!--
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="materialicon"
            android:title="@string/material_icon" />
-->
        <Preference
            android:key="banner_resizer"
            android:title="@string/banner_resizer" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="hide_banner"
            android:title="@string/hide_banner" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="forcecards"
            android:summary="@string/force_cards_summary"
            android:title="@string/force_cards" />
        <Preference
            android:key="theme_color"
            android:title="@string/theme_color"
            android:widgetLayout="@layout/preference_theme_color_view" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:key="section_icons"
            app:defaultValue="true"
            android:summary="@string/section_icons_summary"
            android:title="@string/section_icons" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/apply_on_boot">
        <com.hades.hKtweaks.views.preference.MaterialListPreference
            android:defaultValue="10"
            android:entries="@array/apply_on_boot_delay_entries"
            android:entryValues="@array/apply_on_boot_delay_values"
            android:key="applyonbootdelay"
            android:summary="%s"
            android:title="@string/delay" />
        <Preference
            android:key="applyonboottest"
            android:summary="@string/apply_on_boot_test_summary"
            android:title="@string/test" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="applyonboothide"
            android:summary="@string/apply_on_boot_hide_summary"
            android:title="@string/hide" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:key="applyonbootconfirmationnotification"
            android:summary="@string/apply_on_boot_confirmation_notification_summary"
            android:title="@string/confirmation_notification" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="applyonboottoast"
            android:summary="@string/apply_on_boot_toast_summary"
            android:title="@string/toast" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="applyonbootscript"
            android:summary="@string/apply_on_boot_script_summary"
            android:title="@string/script" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="debugging_category"
        android:title="@string/debugging">
        <Preference
            android:key="logcat"
            android:summary="@string/logcat_summary"
            android:title="@string/logcat" />
        <Preference
            android:key="lastkmsg"
            android:summary="@string/last_kmsg_summary"
            android:title="@string/last_kmsg" />
        <Preference
            android:key="dmesg"
            android:summary="@string/driver_message_summary"
            android:title="@string/driver_message" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="security_category"
        android:title="@string/security">
        <Preference
            android:key="set_password"
            android:summary="@string/set_password_summary"
            android:title="@string/set_password" />
        <Preference
            android:key="delete_password"
            android:title="@string/delete_password" />
        <com.hades.hKtweaks.views.preference.MaterialSwitchPreference
            android:key="fingerprint"
            android:summary="@string/fingerprint_summary"
            android:title="@string/fingerprint" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="sections"
        android:title="@string/sections" />

</PreferenceScreen>
