<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimaryContainer"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.HK3475.SectionTitle"
        android:textColor="?attr/colorOnPrimaryContainer"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_version"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/android_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kernel_version"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/kernel_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerprint"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potential_sot"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/sot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_score"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/cpu_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_information"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/cpu_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HK3475.Body" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.HK3475.ItemTitleSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.HK3475.Code" />
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
