<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/headphonecontainer"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="15dp"
                android:paddingBottom="8dp"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/headphones_volume"
                android:textColor="?colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout

                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.HK3475.Material3Expressive.IconButton.Tonal"
                    android:id="@+id/linked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:checkable="true"
                    android:contentDescription="@string/headphones_linked"
                    app:icon="@drawable/link" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.HK3475.Material3Expressive.IconButton.Tonal"
                    android:id="@+id/unlinked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:checkable="true"
                    android:contentDescription="@string/headphones_unlinked"
                    app:icon="@drawable/unlink" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.HK3475.Material3Expressive.IconButton.Tonal"
                    android:id="@+id/linked_a"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:checkable="true"
                    android:contentDescription="@string/headphones_linked_asymmetric"
                    app:icon="@drawable/link_a" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.grx.soundcontrol.GrxVolumeItemController
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/headphone_left"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:label="@string/left"
                    app:refVal="128"
                    app:valStep="4"
                    app:refValposition="12"
                    app:wheelsize="@dimen/volume_control_size_big"
                    />

                <com.grx.soundcontrol.GrxVolumeItemController
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/headphone_right"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:label="@string/right"
                    app:refVal="128"
                    app:valStep="4"
                    app:refValposition="12"
                    app:wheelsize="@dimen/volume_control_size_big"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/earpiecespeakercontainer"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/speaker_container"
                android:orientation="vertical"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="?colorAccent"
                    android:text="@string/speaker_gain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.grx.soundcontrol.GrxVolumeItemController
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/speaker"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:label=""
                    app:refVal="20"
                    app:valStep="1"
                    app:refValposition="11"
                    app:wheelsize="@dimen/volume_control_size"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:id="@+id/earpiece_container"
                android:orientation="vertical"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="?colorAccent"
                    android:text="@string/earpiece_gain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.grx.soundcontrol.GrxVolumeItemController
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/earpiece"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:label=""
                    app:refVal="128"
                    app:valStep="4"
                    app:refValposition="7"
                    app:wheelsize="@dimen/volume_control_size"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
